--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-hook-form": "^7.6.6",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
